--- a/WebLab/Site.Master
+++ b/WebLab/Site.Master
@@ -48,6 +48,7 @@
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item"><a class="nav-link" visible="false" runat="server" href="~/CreatePost" id="createlink">Создать пост</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Информация</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Связаться с нами</a></li>
                     </ul>
